Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127440,5 +127440,149 @@
     "PPS": 1.021120140767416,
     "VAULT_PNL_SPOT": 10880.918157765409,
     "FUEL": 2454013
+  },
+  "2025-05-19 14:10": {
+    "LTVL": 558327.72203,
+    "TVL_USD": 518202.306489,
+    "TVL_TOKEN": 518256.1222047297,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201584086505249,
+    "VAULT_PNL_SPOT": 9716.702172030811,
+    "FUEL": 2454013
+  },
+  "2025-05-19 14:20": {
+    "LTVL": 559281.780719,
+    "TVL_USD": 518619.206395,
+    "TVL_TOKEN": 518691.6105569176,
+    "SHARES": 508015.341353,
+    "PPS": 1.0210156432982582,
+    "VAULT_PNL_SPOT": 9716.702172030811,
+    "FUEL": 2454013
+  },
+  "2025-05-19 14:30": {
+    "LTVL": 558570.70153,
+    "TVL_USD": 518378.225706,
+    "TVL_TOKEN": 518453.00736778276,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205459661650849,
+    "VAULT_PNL_SPOT": 9716.702172030811,
+    "FUEL": 2454013
+  },
+  "2025-05-19 14:40": {
+    "LTVL": 559745.411513,
+    "TVL_USD": 518381.303431,
+    "TVL_TOKEN": 518457.20038056374,
+    "SHARES": 508015.341353,
+    "PPS": 1.020554219877994,
+    "VAULT_PNL_SPOT": 10126.098064488848,
+    "FUEL": 2454013
+  },
+  "2025-05-19 14:50": {
+    "LTVL": 560049.164999,
+    "TVL_USD": 518090.472801,
+    "TVL_TOKEN": 518165.77783349255,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199805707706755,
+    "VAULT_PNL_SPOT": 10126.098064488848,
+    "FUEL": 2454013
+  },
+  "2025-05-19 15:00": {
+    "LTVL": 561064.074055,
+    "TVL_USD": 518577.908567,
+    "TVL_TOKEN": 518650.54557590786,
+    "SHARES": 508015.341353,
+    "PPS": 1.0209348091626191,
+    "VAULT_PNL_SPOT": 10126.098064488848,
+    "FUEL": 2454013
+  },
+  "2025-05-19 15:10": {
+    "LTVL": 562178.288027,
+    "TVL_USD": 518420.017483,
+    "TVL_TOKEN": 518495.2407725313,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206291002779957,
+    "VAULT_PNL_SPOT": 10301.324049000046,
+    "FUEL": 2454013
+  },
+  "2025-05-19 15:20": {
+    "LTVL": 561372.131155,
+    "TVL_USD": 518284.028023,
+    "TVL_TOKEN": 518359.20565859665,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203613227073964,
+    "VAULT_PNL_SPOT": 10301.324049000046,
+    "FUEL": 2454013
+  },
+  "2025-05-19 15:30": {
+    "LTVL": 560982.964022,
+    "TVL_USD": 518752.544857,
+    "TVL_TOKEN": 518821.9632356809,
+    "SHARES": 508015.341353,
+    "PPS": 1.0212722353106494,
+    "VAULT_PNL_SPOT": 10301.324049000046,
+    "FUEL": 2454013
+  },
+  "2025-05-19 15:40": {
+    "LTVL": 562319.031404,
+    "TVL_USD": 518469.497206,
+    "TVL_TOKEN": 518544.86770252057,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207267881349356,
+    "VAULT_PNL_SPOT": 9818.48846368643,
+    "FUEL": 2454013
+  },
+  "2025-05-19 15:50": {
+    "LTVL": 562480.929669,
+    "TVL_USD": 518679.072081,
+    "TVL_TOKEN": 518753.3575618029,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211371888498568,
+    "VAULT_PNL_SPOT": 9818.48846368643,
+    "FUEL": 2454013
+  },
+  "2025-05-19 16:00": {
+    "LTVL": 562396.175901,
+    "TVL_USD": 518552.45756199997,
+    "TVL_TOKEN": 518617.46107457107,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208696841582272,
+    "VAULT_PNL_SPOT": 9818.48846368643,
+    "FUEL": 2454013
+  },
+  "2025-05-19 16:10": {
+    "LTVL": 560656.14613,
+    "TVL_USD": 518609.030252,
+    "TVL_TOKEN": 518685.6556839142,
+    "SHARES": 508015.341353,
+    "PPS": 1.0210039214613005,
+    "VAULT_PNL_SPOT": 10264.392386769701,
+    "FUEL": 2454013
+  },
+  "2025-05-19 16:20": {
+    "LTVL": 561298.283607,
+    "TVL_USD": 518474.799069,
+    "TVL_TOKEN": 518544.5692407913,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207262006295887,
+    "VAULT_PNL_SPOT": 10264.392386769701,
+    "FUEL": 2454013
+  },
+  "2025-05-19 16:30": {
+    "LTVL": 563139.306182,
+    "TVL_USD": 518257.835499,
+    "TVL_TOKEN": 518332.1643313651,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203080933557798,
+    "VAULT_PNL_SPOT": 10264.392386769701,
+    "FUEL": 2454013
+  },
+  "2025-05-19 16:40": {
+    "LTVL": 562098.29872,
+    "TVL_USD": 518317.28969500004,
+    "TVL_TOKEN": 518390.4916163212,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204229073785231,
+    "VAULT_PNL_SPOT": 10264.392386769701,
+    "FUEL": 2454013
   }
 }
