Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127584,5 +127584,50 @@
     "PPS": 1.0204229073785231,
     "VAULT_PNL_SPOT": 10264.392386769701,
     "FUEL": 2454013
+  },
+  "2025-05-19 16:50": {
+    "LTVL": 563607.484757,
+    "TVL_USD": 518303.12801700004,
+    "TVL_TOKEN": 518378.5313581714,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203993642742581,
+    "VAULT_PNL_SPOT": 10264.392386769701,
+    "FUEL": 2454013
+  },
+  "2025-05-19 17:00": {
+    "LTVL": 564886.098775,
+    "TVL_USD": 518196.421914,
+    "TVL_TOKEN": 518270.6434528489,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201869929213867,
+    "VAULT_PNL_SPOT": 10264.392386769701,
+    "FUEL": 2454013
+  },
+  "2025-05-19 17:10": {
+    "LTVL": 567263.133491,
+    "TVL_USD": 517745.809461,
+    "TVL_TOKEN": 517805.8127985871,
+    "SHARES": 508015.341353,
+    "PPS": 1.0192719995807844,
+    "VAULT_PNL_SPOT": 9654.700970880338,
+    "FUEL": 2454013
+  },
+  "2025-05-19 17:20": {
+    "LTVL": 564677.116196,
+    "TVL_USD": 518726.657007,
+    "TVL_TOKEN": 518763.1675587328,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211564992842697,
+    "VAULT_PNL_SPOT": 9654.700970880338,
+    "FUEL": 2454013
+  },
+  "2025-05-19 17:30": {
+    "LTVL": 566164.315863,
+    "TVL_USD": 518287.116279,
+    "TVL_TOKEN": 518333.994405454,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203116957550382,
+    "VAULT_PNL_SPOT": 9654.700970880338,
+    "FUEL": 2454013
   }
 }
