Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127629,5 +127629,293 @@
     "PPS": 1.0203116957550382,
     "VAULT_PNL_SPOT": 9654.700970880338,
     "FUEL": 2454013
+  },
+  "2025-05-19 17:40": {
+    "LTVL": 565775.617086,
+    "TVL_USD": 518565.11657400004,
+    "TVL_TOKEN": 518611.0292084158,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208570233867273,
+    "VAULT_PNL_SPOT": 10632.845773000037,
+    "FUEL": 2454013
+  },
+  "2025-05-19 17:50": {
+    "LTVL": 565409.712256,
+    "TVL_USD": 518051.74478300003,
+    "TVL_TOKEN": 518096.06272020517,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198433404399896,
+    "VAULT_PNL_SPOT": 10632.845773000037,
+    "FUEL": 2454013
+  },
+  "2025-05-19 18:00": {
+    "LTVL": 565101.691468,
+    "TVL_USD": 518871.607522,
+    "TVL_TOKEN": 518919.9033974092,
+    "SHARES": 508015.341353,
+    "PPS": 1.0214650250824453,
+    "VAULT_PNL_SPOT": 10632.845773000037,
+    "FUEL": 2454013
+  },
+  "2025-05-19 18:10": {
+    "LTVL": 565470.394836,
+    "TVL_USD": 518373.230766,
+    "TVL_TOKEN": 518431.41950852564,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205034716624588,
+    "VAULT_PNL_SPOT": 10250.219509048387,
+    "FUEL": 2463280
+  },
+  "2025-05-19 18:20": {
+    "LTVL": 563761.403172,
+    "TVL_USD": 518795.451513,
+    "TVL_TOKEN": 518837.3943279575,
+    "SHARES": 508015.341353,
+    "PPS": 1.0213026105592304,
+    "VAULT_PNL_SPOT": 10250.219509048387,
+    "FUEL": 2463280
+  },
+  "2025-05-19 18:30": {
+    "LTVL": 564020.858362,
+    "TVL_USD": 518845.850973,
+    "TVL_TOKEN": 518895.8206405277,
+    "SHARES": 508015.341353,
+    "PPS": 1.0214176195123352,
+    "VAULT_PNL_SPOT": 10250.219509048387,
+    "FUEL": 2463280
+  },
+  "2025-05-19 18:40": {
+    "LTVL": 564170.063659,
+    "TVL_USD": 518457.64051399997,
+    "TVL_TOKEN": 518521.3045597738,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206804053964063,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 2463280
+  },
+  "2025-05-19 18:50": {
+    "LTVL": 563748.965641,
+    "TVL_USD": 518804.79908,
+    "TVL_TOKEN": 518841.33069809445,
+    "SHARES": 508015.341353,
+    "PPS": 1.0213103590853407,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 2463280
+  },
+  "2025-05-19 19:00": {
+    "LTVL": 563468.66854,
+    "TVL_USD": 518330.37182500004,
+    "TVL_TOKEN": 518362.142240698,
+    "SHARES": 508015.341353,
+    "PPS": 1.020367103206256,
+    "VAULT_PNL_SPOT": 0.0012450000000008288,
+    "FUEL": 2463280
+  },
+  "2025-05-19 19:10": {
+    "LTVL": 563348.747099,
+    "TVL_USD": 518418.968086,
+    "TVL_TOKEN": 518455.1251464277,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205501348947914,
+    "VAULT_PNL_SPOT": 10868.475957000046,
+    "FUEL": 2463280
+  },
+  "2025-05-19 19:20": {
+    "LTVL": 564165.69243,
+    "TVL_USD": 518029.271061,
+    "TVL_TOKEN": 518068.9344186191,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197899398841839,
+    "VAULT_PNL_SPOT": 10868.475957000046,
+    "FUEL": 2463280
+  },
+  "2025-05-19 19:30": {
+    "LTVL": 563554.327606,
+    "TVL_USD": 518200.484912,
+    "TVL_TOKEN": 518254.0723830844,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201543736903997,
+    "VAULT_PNL_SPOT": 10868.475957000046,
+    "FUEL": 2463280
+  },
+  "2025-05-19 19:40": {
+    "LTVL": 565360.06737,
+    "TVL_USD": 517510.72313,
+    "TVL_TOKEN": 517568.4785965266,
+    "SHARES": 508015.341353,
+    "PPS": 1.0188048203782265,
+    "VAULT_PNL_SPOT": 9882.402739285317,
+    "FUEL": 2463280
+  },
+  "2025-05-19 19:50": {
+    "LTVL": 565734.986373,
+    "TVL_USD": 517566.027366,
+    "TVL_TOKEN": 517618.3016382824,
+    "SHARES": 508015.341353,
+    "PPS": 1.0189028942702927,
+    "VAULT_PNL_SPOT": 9882.402739285317,
+    "FUEL": 2463280
+  },
+  "2025-05-19 20:00": {
+    "LTVL": 566046.458066,
+    "TVL_USD": 517802.676764,
+    "TVL_TOKEN": 517853.21923819766,
+    "SHARES": 508015.341353,
+    "PPS": 1.019365316525671,
+    "VAULT_PNL_SPOT": 9882.402739285317,
+    "FUEL": 2463280
+  },
+  "2025-05-19 20:10": {
+    "LTVL": 566630.72277,
+    "TVL_USD": 518673.579374,
+    "TVL_TOKEN": 518727.5529758872,
+    "SHARES": 508015.341353,
+    "PPS": 1.0210863939548702,
+    "VAULT_PNL_SPOT": 9945.617011025082,
+    "FUEL": 2463280
+  },
+  "2025-05-19 20:20": {
+    "LTVL": 566481.716564,
+    "TVL_USD": 518299.154431,
+    "TVL_TOKEN": 518342.8196301256,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203290677199242,
+    "VAULT_PNL_SPOT": 9945.617011025082,
+    "FUEL": 2463280
+  },
+  "2025-05-19 20:30": {
+    "LTVL": 567556.91002,
+    "TVL_USD": 518567.462276,
+    "TVL_TOKEN": 518609.55781380774,
+    "SHARES": 508015.341353,
+    "PPS": 1.020854127028117,
+    "VAULT_PNL_SPOT": 9945.617011025082,
+    "FUEL": 2463280
+  },
+  "2025-05-19 20:40": {
+    "LTVL": 566520.371454,
+    "TVL_USD": 518612.711372,
+    "TVL_TOKEN": 518652.3675320215,
+    "SHARES": 508015.341353,
+    "PPS": 1.0209383955820936,
+    "VAULT_PNL_SPOT": 10528.510246288439,
+    "FUEL": 2463280
+  },
+  "2025-05-19 20:50": {
+    "LTVL": 566085.718993,
+    "TVL_USD": 518197.63160900003,
+    "TVL_TOKEN": 518240.60411989363,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201278621619194,
+    "VAULT_PNL_SPOT": 10528.510246288439,
+    "FUEL": 2463280
+  },
+  "2025-05-19 21:00": {
+    "LTVL": 565900.709934,
+    "TVL_USD": 518459.817383,
+    "TVL_TOKEN": 518507.0948599093,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206524343909902,
+    "VAULT_PNL_SPOT": 10528.510246288439,
+    "FUEL": 2463280
+  },
+  "2025-05-19 21:10": {
+    "LTVL": 565431.396918,
+    "TVL_USD": 518776.608948,
+    "TVL_TOKEN": 518838.39222374605,
+    "SHARES": 508015.341353,
+    "PPS": 1.021304574861698,
+    "VAULT_PNL_SPOT": 10345.615622722078,
+    "FUEL": 2463280
+  },
+  "2025-05-19 21:20": {
+    "LTVL": 565454.989786,
+    "TVL_USD": 518563.193931,
+    "TVL_TOKEN": 518621.5129201279,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208776599912917,
+    "VAULT_PNL_SPOT": 10345.615622722078,
+    "FUEL": 2463280
+  },
+  "2025-05-19 21:30": {
+    "LTVL": 564726.004959,
+    "TVL_USD": 518683.55357499997,
+    "TVL_TOKEN": 518738.30121531023,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211075512675496,
+    "VAULT_PNL_SPOT": 10345.615622722078,
+    "FUEL": 2463280
+  },
+  "2025-05-19 21:40": {
+    "LTVL": 565129.229896,
+    "TVL_USD": 518355.74643199996,
+    "TVL_TOKEN": 518406.3791830548,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204541811717345,
+    "VAULT_PNL_SPOT": 10211.422336725693,
+    "FUEL": 2463280
+  },
+  "2025-05-19 21:50": {
+    "LTVL": 565496.580951,
+    "TVL_USD": 518054.965021,
+    "TVL_TOKEN": 518106.7238827159,
+    "SHARES": 508015.341353,
+    "PPS": 1.019864326346601,
+    "VAULT_PNL_SPOT": 10211.422336725693,
+    "FUEL": 2463280
+  },
+  "2025-05-19 22:00": {
+    "LTVL": 566139.086558,
+    "TVL_USD": 517964.922786,
+    "TVL_TOKEN": 518017.61035714945,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196889113181313,
+    "VAULT_PNL_SPOT": 10211.422336725693,
+    "FUEL": 2463280
+  },
+  "2025-05-19 22:10": {
+    "LTVL": 566047.752781,
+    "TVL_USD": 518354.876861,
+    "TVL_TOKEN": 518408.22106694785,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204578068179366,
+    "VAULT_PNL_SPOT": 10039.226577373745,
+    "FUEL": 2463280
+  },
+  "2025-05-19 22:20": {
+    "LTVL": 565405.909612,
+    "TVL_USD": 519054.798348,
+    "TVL_TOKEN": 519101.5174845736,
+    "SHARES": 508015.341353,
+    "PPS": 1.0218225223318014,
+    "VAULT_PNL_SPOT": 10039.226577373745,
+    "FUEL": 2463280
+  },
+  "2025-05-19 22:30": {
+    "LTVL": 564299.078272,
+    "TVL_USD": 518702.61722899997,
+    "TVL_TOKEN": 518753.7715384114,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211380037398312,
+    "VAULT_PNL_SPOT": 10039.226577373745,
+    "FUEL": 2463280
+  },
+  "2025-05-19 22:40": {
+    "LTVL": 564975.46435,
+    "TVL_USD": 518668.003598,
+    "TVL_TOKEN": 518714.16915905516,
+    "SHARES": 508015.341353,
+    "PPS": 1.0210600486543593,
+    "VAULT_PNL_SPOT": 10256.739861888811,
+    "FUEL": 2463280
+  },
+  "2025-05-19 22:50": {
+    "LTVL": 565474.933966,
+    "TVL_USD": 518453.830256,
+    "TVL_TOKEN": 518504.3429490901,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206470174072986,
+    "VAULT_PNL_SPOT": 10256.739861888811,
+    "FUEL": 2463280
   }
 }
