Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -127917,5 +127917,356 @@
     "PPS": 1.0206470174072986,
     "VAULT_PNL_SPOT": 10256.739861888811,
     "FUEL": 2463280
+  },
+  "2025-05-19 23:00": {
+    "LTVL": 565312.162957,
+    "TVL_USD": 518503.196621,
+    "TVL_TOKEN": 518548.9793103833,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207348816067818,
+    "VAULT_PNL_SPOT": 10256.739861888811,
+    "FUEL": 2463280
+  },
+  "2025-05-19 23:10": {
+    "LTVL": 566045.507744,
+    "TVL_USD": 517869.940359,
+    "TVL_TOKEN": 517936.1429567927,
+    "SHARES": 508015.341353,
+    "PPS": 1.0195285472627078,
+    "VAULT_PNL_SPOT": 9935.613586291845,
+    "FUEL": 2463280
+  },
+  "2025-05-19 23:20": {
+    "LTVL": 566024.993894,
+    "TVL_USD": 518201.54451100004,
+    "TVL_TOKEN": 518259.2008470943,
+    "SHARES": 508015.341353,
+    "PPS": 1.020164468787127,
+    "VAULT_PNL_SPOT": 9935.613586291845,
+    "FUEL": 2463280
+  },
+  "2025-05-19 23:30": {
+    "LTVL": 565969.302353,
+    "TVL_USD": 518274.320303,
+    "TVL_TOKEN": 518335.2765315201,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203142195490298,
+    "VAULT_PNL_SPOT": 9935.613586291845,
+    "FUEL": 2463280
+  },
+  "2025-05-19 23:40": {
+    "LTVL": 566450.223982,
+    "TVL_USD": 517956.693929,
+    "TVL_TOKEN": 518018.5090776882,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196906803996246,
+    "VAULT_PNL_SPOT": 9883.353540258831,
+    "FUEL": 2463280
+  },
+  "2025-05-19 23:50": {
+    "LTVL": 566781.426936,
+    "TVL_USD": 518021.595951,
+    "TVL_TOKEN": 518098.062043977,
+    "SHARES": 508015.341353,
+    "PPS": 1.019847275997854,
+    "VAULT_PNL_SPOT": 9883.353540258831,
+    "FUEL": 2463280
+  },
+  "2025-05-20 00:00": {
+    "LTVL": 566791.858535,
+    "TVL_USD": 518058.992499,
+    "TVL_TOKEN": 518135.3656518971,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199207060793565,
+    "VAULT_PNL_SPOT": 9883.353540258831,
+    "FUEL": 2463280
+  },
+  "2025-05-20 00:10": {
+    "LTVL": 567446.139349,
+    "TVL_USD": 517766.44421499997,
+    "TVL_TOKEN": 517833.59687584284,
+    "SHARES": 508015.341353,
+    "PPS": 1.0193266909945944,
+    "VAULT_PNL_SPOT": 9947.349461000005,
+    "FUEL": 2463280
+  },
+  "2025-05-20 00:20": {
+    "LTVL": 569982.90863,
+    "TVL_USD": 517068.971145,
+    "TVL_TOKEN": 517139.5658671366,
+    "SHARES": 508015.341353,
+    "PPS": 1.017960529478964,
+    "VAULT_PNL_SPOT": 9947.349461000005,
+    "FUEL": 2467561
+  },
+  "2025-05-20 00:30": {
+    "LTVL": 568491.558109,
+    "TVL_USD": 518752.626171,
+    "TVL_TOKEN": 518822.3299510289,
+    "SHARES": 508015.341353,
+    "PPS": 1.0212729571694559,
+    "VAULT_PNL_SPOT": 9947.349461000005,
+    "FUEL": 2467561
+  },
+  "2025-05-20 00:40": {
+    "LTVL": 568816.450265,
+    "TVL_USD": 518045.85823799996,
+    "TVL_TOKEN": 518108.03120174416,
+    "SHARES": 508015.341353,
+    "PPS": 1.01986689973154,
+    "VAULT_PNL_SPOT": 10406.385271924955,
+    "FUEL": 2467561
+  },
+  "2025-05-20 00:50": {
+    "LTVL": 567499.092454,
+    "TVL_USD": 518717.138205,
+    "TVL_TOKEN": 518779.9105741795,
+    "SHARES": 508015.341353,
+    "PPS": 1.0211894569807876,
+    "VAULT_PNL_SPOT": 10406.385271924955,
+    "FUEL": 2467561
+  },
+  "2025-05-20 01:00": {
+    "LTVL": 567249.966187,
+    "TVL_USD": 518372.44277900003,
+    "TVL_TOKEN": 518435.5260138054,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205115550901538,
+    "VAULT_PNL_SPOT": 10406.385271924955,
+    "FUEL": 2467561
+  },
+  "2025-05-20 01:10": {
+    "LTVL": 568472.714617,
+    "TVL_USD": 518423.953382,
+    "TVL_TOKEN": 518484.33088233124,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206076247647347,
+    "VAULT_PNL_SPOT": 10085.01828789711,
+    "FUEL": 2467561
+  },
+  "2025-05-20 01:20": {
+    "LTVL": 568244.154791,
+    "TVL_USD": 518424.059778,
+    "TVL_TOKEN": 518494.23797310964,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206271263229987,
+    "VAULT_PNL_SPOT": 10085.01828789711,
+    "FUEL": 2467561
+  },
+  "2025-05-20 01:30": {
+    "LTVL": 569292.433444,
+    "TVL_USD": 518322.982525,
+    "TVL_TOKEN": 518399.1975750275,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204400445749768,
+    "VAULT_PNL_SPOT": 10085.01828789711,
+    "FUEL": 2467561
+  },
+  "2025-05-20 01:40": {
+    "LTVL": 571166.596475,
+    "TVL_USD": 517584.70079,
+    "TVL_TOKEN": 517659.8908891516,
+    "SHARES": 508015.341353,
+    "PPS": 1.0189847604020486,
+    "VAULT_PNL_SPOT": 9920.444791322283,
+    "FUEL": 2467561
+  },
+  "2025-05-20 01:50": {
+    "LTVL": 570747.546961,
+    "TVL_USD": 518554.88172400004,
+    "TVL_TOKEN": 518614.0970816048,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208630623248052,
+    "VAULT_PNL_SPOT": 9920.444791322283,
+    "FUEL": 2467561
+  },
+  "2025-05-20 02:00": {
+    "LTVL": 572152.587301,
+    "TVL_USD": 518690.589551,
+    "TVL_TOKEN": 518750.2665816675,
+    "SHARES": 508015.341353,
+    "PPS": 1.021131104427038,
+    "VAULT_PNL_SPOT": 9920.444791322283,
+    "FUEL": 2467561
+  },
+  "2025-05-20 02:10": {
+    "LTVL": 573340.794129,
+    "TVL_USD": 518255.96302,
+    "TVL_TOKEN": 518315.81813067774,
+    "SHARES": 508015.341353,
+    "PPS": 1.020275916767089,
+    "VAULT_PNL_SPOT": 10037.830774000031,
+    "FUEL": 2467561
+  },
+  "2025-05-20 02:20": {
+    "LTVL": 574730.140169,
+    "TVL_USD": 517093.809528,
+    "TVL_TOKEN": 517161.0611523923,
+    "SHARES": 508015.341353,
+    "PPS": 1.0180028417548068,
+    "VAULT_PNL_SPOT": 10037.830774000031,
+    "FUEL": 2467561
+  },
+  "2025-05-20 02:30": {
+    "LTVL": 574570.514543,
+    "TVL_USD": 518902.23169399996,
+    "TVL_TOKEN": 518953.9921651785,
+    "SHARES": 508015.341353,
+    "PPS": 1.0215321269295639,
+    "VAULT_PNL_SPOT": 10037.830774000031,
+    "FUEL": 2467561
+  },
+  "2025-05-20 02:40": {
+    "LTVL": 574285.291513,
+    "TVL_USD": 518337.355039,
+    "TVL_TOKEN": 518389.7279532151,
+    "SHARES": 508015.341353,
+    "PPS": 1.020421404150089,
+    "VAULT_PNL_SPOT": 9970.661034000048,
+    "FUEL": 2467561
+  },
+  "2025-05-20 02:50": {
+    "LTVL": 572748.221514,
+    "TVL_USD": 518439.571485,
+    "TVL_TOKEN": 518505.255730796,
+    "SHARES": 508015.341353,
+    "PPS": 1.020648814167419,
+    "VAULT_PNL_SPOT": 9970.661034000048,
+    "FUEL": 2467561
+  },
+  "2025-05-20 03:00": {
+    "LTVL": 572681.012767,
+    "TVL_USD": 518192.56552099995,
+    "TVL_TOKEN": 518239.2070496344,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201251121066641,
+    "VAULT_PNL_SPOT": 9970.661034000048,
+    "FUEL": 2467561
+  },
+  "2025-05-20 03:10": {
+    "LTVL": 571784.149441,
+    "TVL_USD": 518349.257044,
+    "TVL_TOKEN": 518396.5140702227,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204347622447276,
+    "VAULT_PNL_SPOT": 10760.341140000033,
+    "FUEL": 2467561
+  },
+  "2025-05-20 03:20": {
+    "LTVL": 571001.048269,
+    "TVL_USD": 518056.479468,
+    "TVL_TOKEN": 518109.6945147236,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198701738708111,
+    "VAULT_PNL_SPOT": 10760.341140000033,
+    "FUEL": 2467561
+  },
+  "2025-05-20 03:30": {
+    "LTVL": 571618.395829,
+    "TVL_USD": 518334.321349,
+    "TVL_TOKEN": 518404.48739636905,
+    "SHARES": 508015.341353,
+    "PPS": 1.020450457294655,
+    "VAULT_PNL_SPOT": 10760.341140000033,
+    "FUEL": 2467561
+  },
+  "2025-05-20 03:40": {
+    "LTVL": 570191.977661,
+    "TVL_USD": 518261.170257,
+    "TVL_TOKEN": 518325.4737152691,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202949232493848,
+    "VAULT_PNL_SPOT": 10394.892706000013,
+    "FUEL": 2467561
+  },
+  "2025-05-20 03:50": {
+    "LTVL": 569555.879267,
+    "TVL_USD": 518536.16664300003,
+    "TVL_TOKEN": 518594.0209919819,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208235436567872,
+    "VAULT_PNL_SPOT": 10394.892706000013,
+    "FUEL": 2467561
+  },
+  "2025-05-20 04:00": {
+    "LTVL": 570336.899379,
+    "TVL_USD": 518227.62336699996,
+    "TVL_TOKEN": 518298.4488500353,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202417263022967,
+    "VAULT_PNL_SPOT": 10394.892706000013,
+    "FUEL": 2467561
+  },
+  "2025-05-20 04:10": {
+    "LTVL": 569617.559805,
+    "TVL_USD": 518511.874099,
+    "TVL_TOKEN": 518589.66773505695,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208149745121757,
+    "VAULT_PNL_SPOT": 9773.19200000004,
+    "FUEL": 2467561
+  },
+  "2025-05-20 04:20": {
+    "LTVL": 569726.694098,
+    "TVL_USD": 518190.973146,
+    "TVL_TOKEN": 518267.8737331045,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201815408818145,
+    "VAULT_PNL_SPOT": 9773.19200000004,
+    "FUEL": 2467561
+  },
+  "2025-05-20 04:30": {
+    "LTVL": 569832.655403,
+    "TVL_USD": 518216.643484,
+    "TVL_TOKEN": 518280.4282563055,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202062537638459,
+    "VAULT_PNL_SPOT": 9773.19200000004,
+    "FUEL": 2467561
+  },
+  "2025-05-20 04:40": {
+    "LTVL": 570536.721343,
+    "TVL_USD": 518015.006882,
+    "TVL_TOKEN": 518074.08805100137,
+    "SHARES": 508015.341353,
+    "PPS": 1.0198000845234552,
+    "VAULT_PNL_SPOT": 9804.148726000043,
+    "FUEL": 2467561
+  },
+  "2025-05-20 04:50": {
+    "LTVL": 571149.085376,
+    "TVL_USD": 517758.919908,
+    "TVL_TOKEN": 517827.83243594057,
+    "SHARES": 508015.341353,
+    "PPS": 1.0193153440146254,
+    "VAULT_PNL_SPOT": 9804.148726000043,
+    "FUEL": 2467561
+  },
+  "2025-05-20 05:00": {
+    "LTVL": 572230.056218,
+    "TVL_USD": 518234.047503,
+    "TVL_TOKEN": 518297.3938104715,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202396495154797,
+    "VAULT_PNL_SPOT": 9804.148726000043,
+    "FUEL": 2467561
+  },
+  "2025-05-20 05:10": {
+    "LTVL": 572329.667908,
+    "TVL_USD": 518072.23888099997,
+    "TVL_TOKEN": 518138.32742466294,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199265361646408,
+    "VAULT_PNL_SPOT": 10143.798359000008,
+    "FUEL": 2467561
+  },
+  "2025-05-20 05:20": {
+    "LTVL": 572858.40385,
+    "TVL_USD": 518245.908659,
+    "TVL_TOKEN": 518315.0415192378,
+    "SHARES": 508015.341353,
+    "PPS": 1.0202743880505785,
+    "VAULT_PNL_SPOT": 10143.798359000008,
+    "FUEL": 2467561
   }
 }
