Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -128268,5 +128268,14 @@
     "PPS": 1.0202743880505785,
     "VAULT_PNL_SPOT": 10143.798359000008,
     "FUEL": 2467561
+  },
+  "2025-05-20 05:30": {
+    "LTVL": 572337.073079,
+    "TVL_USD": 518329.748954,
+    "TVL_TOKEN": 518394.27348922123,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204303517853988,
+    "VAULT_PNL_SPOT": 10143.798359000008,
+    "FUEL": 2467561
   }
 }
