Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -128277,5 +128277,212 @@
     "PPS": 1.0204303517853988,
     "VAULT_PNL_SPOT": 10143.798359000008,
     "FUEL": 2467561
+  },
+  "2025-05-20 05:40": {
+    "LTVL": 572114.280621,
+    "TVL_USD": 518457.731316,
+    "TVL_TOKEN": 518510.6868124442,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206595049501692,
+    "VAULT_PNL_SPOT": 9135.629108000023,
+    "FUEL": 2467561
+  },
+  "2025-05-20 05:50": {
+    "LTVL": 571544.042416,
+    "TVL_USD": 518484.202496,
+    "TVL_TOKEN": 518554.20731398737,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207451726416747,
+    "VAULT_PNL_SPOT": 9135.629108000023,
+    "FUEL": 2467561
+  },
+  "2025-05-20 06:00": {
+    "LTVL": 571084.777843,
+    "TVL_USD": 518553.777067,
+    "TVL_TOKEN": 518622.126277022,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208788673502909,
+    "VAULT_PNL_SPOT": 10236.044831000036,
+    "FUEL": 2467561
+  },
+  "2025-05-20 06:10": {
+    "LTVL": 569978.44736,
+    "TVL_USD": 518419.02615,
+    "TVL_TOKEN": 518483.8625570127,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206067028923413,
+    "VAULT_PNL_SPOT": 10013.762005571742,
+    "FUEL": 2475532
+  },
+  "2025-05-20 06:20": {
+    "LTVL": 569593.396073,
+    "TVL_USD": 518334.251508,
+    "TVL_TOKEN": 518411.9096120599,
+    "SHARES": 508015.341353,
+    "PPS": 1.020465067514242,
+    "VAULT_PNL_SPOT": 10013.762005571742,
+    "FUEL": 2475532
+  },
+  "2025-05-20 06:30": {
+    "LTVL": 568686.126192,
+    "TVL_USD": 518128.787649,
+    "TVL_TOKEN": 518196.7647005934,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200415666985119,
+    "VAULT_PNL_SPOT": 10013.762005571742,
+    "FUEL": 2475532
+  },
+  "2025-05-20 06:40": {
+    "LTVL": 569093.324177,
+    "TVL_USD": 518188.046387,
+    "TVL_TOKEN": 518248.20982167823,
+    "SHARES": 508015.341353,
+    "PPS": 1.020142833563697,
+    "VAULT_PNL_SPOT": 10164.281909283833,
+    "FUEL": 2475532
+  },
+  "2025-05-20 06:50": {
+    "LTVL": 569231.614548,
+    "TVL_USD": 517839.274728,
+    "TVL_TOKEN": 517910.389003514,
+    "SHARES": 508015.341353,
+    "PPS": 1.0194778520352563,
+    "VAULT_PNL_SPOT": 10164.281909283833,
+    "FUEL": 2475532
+  },
+  "2025-05-20 07:00": {
+    "LTVL": 569309.70817,
+    "TVL_USD": 518451.04453099996,
+    "TVL_TOKEN": 518526.1063701581,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206898574936039,
+    "VAULT_PNL_SPOT": 10164.281909283833,
+    "FUEL": 2475532
+  },
+  "2025-05-20 07:10": {
+    "LTVL": 568653.017041,
+    "TVL_USD": 518129.004617,
+    "TVL_TOKEN": 518193.01700039004,
+    "SHARES": 508015.341353,
+    "PPS": 1.0200341895586928,
+    "VAULT_PNL_SPOT": 10258.449345334666,
+    "FUEL": 2475532
+  },
+  "2025-05-20 07:20": {
+    "LTVL": 568503.781692,
+    "TVL_USD": 518447.954564,
+    "TVL_TOKEN": 518520.5941140295,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206790069233949,
+    "VAULT_PNL_SPOT": 10258.449345334666,
+    "FUEL": 2475532
+  },
+  "2025-05-20 07:30": {
+    "LTVL": 568699.78331,
+    "TVL_USD": 518326.32452200004,
+    "TVL_TOKEN": 518403.95032952237,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204494001083793,
+    "VAULT_PNL_SPOT": 10258.449345334666,
+    "FUEL": 2475532
+  },
+  "2025-05-20 07:40": {
+    "LTVL": 567737.889965,
+    "TVL_USD": 518483.86148599995,
+    "TVL_TOKEN": 518557.9323010498,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207525050719368,
+    "VAULT_PNL_SPOT": 10233.003245000029,
+    "FUEL": 2475532
+  },
+  "2025-05-20 07:50": {
+    "LTVL": 567360.138615,
+    "TVL_USD": 518448.146295,
+    "TVL_TOKEN": 518522.5231657229,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206828041545735,
+    "VAULT_PNL_SPOT": 10233.003245000029,
+    "FUEL": 2475532
+  },
+  "2025-05-20 08:00": {
+    "LTVL": 567368.059668,
+    "TVL_USD": 518433.41284199996,
+    "TVL_TOKEN": 518495.67898808967,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206299628809974,
+    "VAULT_PNL_SPOT": 10233.003245000029,
+    "FUEL": 2475532
+  },
+  "2025-05-20 08:10": {
+    "LTVL": 567631.917391,
+    "TVL_USD": 518339.729482,
+    "TVL_TOKEN": 518399.23134577385,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204401110508166,
+    "VAULT_PNL_SPOT": 9707.865876825701,
+    "FUEL": 2475532
+  },
+  "2025-05-20 08:20": {
+    "LTVL": 566679.47152,
+    "TVL_USD": 518456.913843,
+    "TVL_TOKEN": 518523.0203428635,
+    "SHARES": 508015.341353,
+    "PPS": 1.020683782820177,
+    "VAULT_PNL_SPOT": 9707.865876825701,
+    "FUEL": 2475532
+  },
+  "2025-05-20 08:30": {
+    "LTVL": 566546.152155,
+    "TVL_USD": 518794.968918,
+    "TVL_TOKEN": 518863.2046180393,
+    "SHARES": 508015.341353,
+    "PPS": 1.0213534166825515,
+    "VAULT_PNL_SPOT": 9707.865876825701,
+    "FUEL": 2475532
+  },
+  "2025-05-20 08:40": {
+    "LTVL": 566536.50064,
+    "TVL_USD": 518504.453997,
+    "TVL_TOKEN": 518573.5072452248,
+    "SHARES": 508015.341353,
+    "PPS": 1.0207831634849946,
+    "VAULT_PNL_SPOT": 9857.005816999997,
+    "FUEL": 2475532
+  },
+  "2025-05-20 08:50": {
+    "LTVL": 567438.589156,
+    "TVL_USD": 517947.52337999997,
+    "TVL_TOKEN": 518007.72623794334,
+    "SHARES": 508015.341353,
+    "PPS": 1.0196694549781322,
+    "VAULT_PNL_SPOT": 9857.005816999997,
+    "FUEL": 2475532
+  },
+  "2025-05-20 09:00": {
+    "LTVL": 567530.086963,
+    "TVL_USD": 517993.581617,
+    "TVL_TOKEN": 518059.93991470366,
+    "SHARES": 508015.341353,
+    "PPS": 1.0197722347025029,
+    "VAULT_PNL_SPOT": 9857.005816999997,
+    "FUEL": 2475532
+  },
+  "2025-05-20 09:10": {
+    "LTVL": 567964.646766,
+    "TVL_USD": 517991.667511,
+    "TVL_TOKEN": 518065.0099744621,
+    "SHARES": 508015.341353,
+    "PPS": 1.019782214833703,
+    "VAULT_PNL_SPOT": 9934.55809707474,
+    "FUEL": 2475532
+  },
+  "2025-05-20 09:20": {
+    "LTVL": 567678.47962,
+    "TVL_USD": 518410.470735,
+    "TVL_TOKEN": 518486.21638635185,
+    "SHARES": 508015.341353,
+    "PPS": 1.0206113362747367,
+    "VAULT_PNL_SPOT": 9934.55809707474,
+    "FUEL": 2475532
   }
 }
