Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -128484,5 +128484,68 @@
     "PPS": 1.0206113362747367,
     "VAULT_PNL_SPOT": 9934.55809707474,
     "FUEL": 2475532
+  },
+  "2025-05-20 09:30": {
+    "LTVL": 567545.728727,
+    "TVL_USD": 518194.92547099997,
+    "TVL_TOKEN": 518271.2098103719,
+    "SHARES": 508015.341353,
+    "PPS": 1.0201881077647328,
+    "VAULT_PNL_SPOT": 9934.55809707474,
+    "FUEL": 2475532
+  },
+  "2025-05-20 09:40": {
+    "LTVL": 568045.764312,
+    "TVL_USD": 518074.893997,
+    "TVL_TOKEN": 518153.1973081772,
+    "SHARES": 508015.341353,
+    "PPS": 1.0199558067049255,
+    "VAULT_PNL_SPOT": 9934.55809707474,
+    "FUEL": 2475532
+  },
+  "2025-05-20 09:50": {
+    "LTVL": 567870.49066,
+    "TVL_USD": 518399.658447,
+    "TVL_TOKEN": 518477.40931930154,
+    "SHARES": 508015.341353,
+    "PPS": 1.02059400005212,
+    "VAULT_PNL_SPOT": 9934.55809707474,
+    "FUEL": 2475532
+  },
+  "2025-05-20 10:00": {
+    "LTVL": 567434.974221,
+    "TVL_USD": 518321.962023,
+    "TVL_TOKEN": 518401.4796259598,
+    "SHARES": 508015.341353,
+    "PPS": 1.0204445366655628,
+    "VAULT_PNL_SPOT": 9934.55809707474,
+    "FUEL": 2475532
+  },
+  "2025-05-20 10:10": {
+    "LTVL": 567513.256971,
+    "TVL_USD": 518273.04230599996,
+    "TVL_TOKEN": 518346.88081917266,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203370619451306,
+    "VAULT_PNL_SPOT": 10005.682633000019,
+    "FUEL": 2475532
+  },
+  "2025-05-20 10:20": {
+    "LTVL": 566896.852273,
+    "TVL_USD": 518742.800811,
+    "TVL_TOKEN": 518822.2169277451,
+    "SHARES": 508015.341353,
+    "PPS": 1.0212727346893955,
+    "VAULT_PNL_SPOT": 10005.682633000019,
+    "FUEL": 2475532
+  },
+  "2025-05-20 10:30": {
+    "LTVL": 566827.945621,
+    "TVL_USD": 518529.988361,
+    "TVL_TOKEN": 518602.9143028093,
+    "SHARES": 508015.341353,
+    "PPS": 1.0208410496454916,
+    "VAULT_PNL_SPOT": 10005.682633000019,
+    "FUEL": 2475532
   }
 }
