Update vault data

--- a/projectsuperjlpdn.json
+++ b/projectsuperjlpdn.json
@@ -128547,5 +128547,32 @@
     "PPS": 1.0208410496454916,
     "VAULT_PNL_SPOT": 10005.682633000019,
     "FUEL": 2475532
+  },
+  "2025-05-20 10:40": {
+    "LTVL": 566170.857562,
+    "TVL_USD": 518756.115341,
+    "TVL_TOKEN": 518829.77879299305,
+    "SHARES": 508015.341353,
+    "PPS": 1.021287619801384,
+    "VAULT_PNL_SPOT": 10583.565365262271,
+    "FUEL": 2475532
+  },
+  "2025-05-20 10:50": {
+    "LTVL": 565601.94162,
+    "TVL_USD": 518259.813469,
+    "TVL_TOKEN": 518334.1477691315,
+    "SHARES": 508015.341353,
+    "PPS": 1.0203119976429242,
+    "VAULT_PNL_SPOT": 10583.565365262271,
+    "FUEL": 2475532
+  },
+  "2025-05-20 11:00": {
+    "LTVL": 565759.53502,
+    "TVL_USD": 518374.599757,
+    "TVL_TOKEN": 518445.58014137717,
+    "SHARES": 508015.341353,
+    "PPS": 1.0205313460821837,
+    "VAULT_PNL_SPOT": 10583.565365262271,
+    "FUEL": 2475532
   }
 }
